@@ -84,7 +84,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
@@ -206,14 +206,16 @@ public class PlotSquared {
         GlobalFlagContainer.setup();
 
         try {
-            new ReflectionUtils(this.platform.serverNativePackage());
+            String ver = this.platform.serverNativePackage();
+            new ReflectionUtils(ver.isEmpty() ? null : ver);
             try {
                 URL logurl = PlotSquared.class.getProtectionDomain().getCodeSource().getLocation();
                 this.jarFile = new File(
-                        new URL(logurl.toURI().toString().split("\\!")[0].replaceAll("jar:file", "file"))
-                                .toURI().getPath());
-            } catch (MalformedURLException | URISyntaxException | SecurityException e) {
-                e.printStackTrace();
+                        URI.create(
+                                logurl.toURI().toString().split("\\!")[0].replaceAll("jar:file", "file"))
+                                .getPath());
+            } catch (URISyntaxException | SecurityException e) {
+                LOGGER.error(e);
                 this.jarFile = new File(this.platform.getDirectory().getParentFile(), "PlotSquared.jar");
                 if (!this.jarFile.exists()) {
                     this.jarFile = new File(
@@ -237,7 +239,7 @@ public class PlotSquared {
             copyFile("skyblock.template", Settings.Paths.TEMPLATES);
             showDebug();
         } catch (Throwable e) {
-            e.printStackTrace();
+            LOGGER.error(e);
         }
     }
 
@@ -270,7 +272,11 @@ public class PlotSquared {
             captionMap = this.captionLoader.loadAll(this.platform.getDirectory().toPath().resolve("lang"));
         } else {
             String fileName = "messages_" + Settings.Enabled_Components.DEFAULT_LOCALE + ".json";
-            captionMap = this.captionLoader.loadOrCreateSingle(this.platform.getDirectory().toPath().resolve("lang").resolve(fileName));
+            captionMap = this.captionLoader.loadOrCreateSingle(this.platform
+                    .getDirectory()
+                    .toPath()
+                    .resolve("lang")
+                    .resolve(fileName));
         }
         this.captionMaps.put(TranslatableCaption.DEFAULT_NAMESPACE, captionMap);
         LOGGER.info(
@@ -790,6 +796,7 @@ public class PlotSquared {
         if (world.equals("CheckingPlotSquaredGenerator")) {
             return;
         }
+        // Don't check the return result -> breaks runtime loading of single plot areas on creation
         this.getPlotAreaManager().addWorld(world);
         Set<String> worlds;
         if (this.worldConfiguration.contains("worlds")) {
@@ -1009,7 +1016,7 @@ public class PlotSquared {
 
     /**
      * Setup the configuration for a plot world based on world arguments.
-     *
+     * <p>
      *
      * <i>e.g. /mv create &lt;world&gt; normal -g PlotSquared:&lt;args&gt;</i>
      *
@@ -1275,7 +1282,7 @@ public class PlotSquared {
     }
 
     /**
-     * Setup the database connection.
+     * Set up the database connection.
      */
     public void setupDatabase() {
         try {
