@@ -22,7 +22,6 @@ import com.google.common.collect.Lists;
 import com.google.inject.Inject;
 import com.plotsquared.core.configuration.Settings;
 import com.plotsquared.core.configuration.caption.TranslatableCaption;
-import com.plotsquared.core.location.Location;
 import com.plotsquared.core.permissions.Permission;
 import com.plotsquared.core.player.ConsolePlayer;
 import com.plotsquared.core.player.PlotPlayer;
@@ -35,9 +34,12 @@ import com.plotsquared.core.util.StringMan;
 import com.plotsquared.core.util.TabCompletions;
 import com.plotsquared.core.util.task.RunnableVal;
 import com.plotsquared.core.util.task.TaskManager;
-import net.kyori.adventure.text.minimessage.Template;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.minimessage.tag.Tag;
+import net.kyori.adventure.text.minimessage.tag.resolver.TagResolver;
 import org.checkerframework.checker.nullness.qual.NonNull;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -72,7 +74,7 @@ public class SchematicCmd extends SubCommand {
         if (args.length < 1) {
             player.sendMessage(
                     TranslatableCaption.of("commandconfig.command_syntax"),
-                    Template.of("value", "Possible values: save, paste, exportall, list")
+                    TagResolver.resolver("value", Tag.inserting(Component.text("Possible values: save, paste, exportall, list")))
             );
             return true;
         }
@@ -82,19 +84,24 @@ public class SchematicCmd extends SubCommand {
                 if (!player.hasPermission(Permission.PERMISSION_SCHEMATIC_PASTE)) {
                     player.sendMessage(
                             TranslatableCaption.of("permission.no_permission"),
-                            Template.of("node", String.valueOf(Permission.PERMISSION_SCHEMATIC_PASTE))
+                            TagResolver.resolver(
+                                    "node",
+                                    Tag.inserting(Permission.PERMISSION_SCHEMATIC_PASTE)
+                            )
                     );
                     return false;
                 }
                 if (args.length < 2) {
                     player.sendMessage(
                             TranslatableCaption.of("commandconfig.command_syntax"),
-                            Template.of("value", "Possible values: save, paste, exportall, list")
+                            TagResolver.resolver(
+                                    "value",
+                                    Tag.inserting(Component.text("Possible values: save, paste, exportall, list"))
+                            )
                     );
                     break;
                 }
-                Location loc = player.getLocation();
-                final Plot plot = loc.getPlotAbs();
+                final Plot plot = player.getCurrentPlot();
                 if (plot == null) {
                     player.sendMessage(TranslatableCaption.of("errors.not_in_plot"));
                     return false;
@@ -122,14 +129,16 @@ public class SchematicCmd extends SubCommand {
                     if (location.startsWith("url:")) {
                         try {
                             UUID uuid = UUID.fromString(location.substring(4));
-                            URL base = new URL(Settings.Web.URL);
-                            URL url = new URL(base, "uploads/" + uuid + ".schematic");
+                            URL url = URI.create(Settings.Web.URL + "uploads/" + uuid + ".schematic").toURL();
                             schematic = this.schematicHandler.getSchematic(url);
                         } catch (Exception e) {
                             e.printStackTrace();
                             player.sendMessage(
                                     TranslatableCaption.of("schematics.schematic_invalid"),
-                                    Template.of("reason", "non-existent url: " + location)
+                                    TagResolver.resolver(
+                                            "reason",
+                                            Tag.inserting(Component.text("non-existent url: " + location))
+                                    )
                             );
                             SchematicCmd.this.running = false;
                             return;
@@ -145,7 +154,10 @@ public class SchematicCmd extends SubCommand {
                         SchematicCmd.this.running = false;
                         player.sendMessage(
                                 TranslatableCaption.of("schematics.schematic_invalid"),
-                                Template.of("reason", "non-existent or not in gzip format")
+                                TagResolver.resolver(
+                                        "reason",
+                                        Tag.inserting(Component.text("non-existent or not in gzip format"))
+                                )
                         );
                         return;
                     }
@@ -180,7 +192,10 @@ public class SchematicCmd extends SubCommand {
                     player.sendMessage(TranslatableCaption.of("schematics.schematic_exportall_world_args"));
                     player.sendMessage(
                             TranslatableCaption.of("commandconfig.command_syntax"),
-                            Template.of("value", "Use /plot schematic exportall <area>")
+                            TagResolver.resolver(
+                                    "value",
+                                    Tag.inserting(Component.text("Use /plot schematic exportall <area>"))
+                            )
                     );
                     return false;
                 }
@@ -188,7 +203,7 @@ public class SchematicCmd extends SubCommand {
                 if (area == null) {
                     player.sendMessage(
                             TranslatableCaption.of("errors.not_valid_plot_world"),
-                            Template.of("value", args[1])
+                            TagResolver.resolver("value", Tag.inserting(Component.text(args[1])))
                     );
                     return false;
                 }
@@ -197,7 +212,7 @@ public class SchematicCmd extends SubCommand {
                     player.sendMessage(TranslatableCaption.of("schematic.schematic_exportall_world"));
                     player.sendMessage(
                             TranslatableCaption.of("commandconfig.command_syntax"),
-                            Template.of("value", "Use /plot sch exportall <area>")
+                            TagResolver.resolver("value", Tag.inserting(Component.text("Use /plot sch exportall <area>")))
                     );
                     return false;
                 }
@@ -211,7 +226,7 @@ public class SchematicCmd extends SubCommand {
                     player.sendMessage(TranslatableCaption.of("schematics.schematic_exportall_started"));
                     player.sendMessage(
                             TranslatableCaption.of("schematics.plot_to_schem"),
-                            Template.of("amount", String.valueOf(plots.size()))
+                            TagResolver.resolver("amount", Tag.inserting(Component.text(plots.size())))
                     );
                 }
             }
@@ -219,7 +234,10 @@ public class SchematicCmd extends SubCommand {
                 if (!player.hasPermission(Permission.PERMISSION_SCHEMATIC_SAVE)) {
                     player.sendMessage(
                             TranslatableCaption.of("permission.no_permission"),
-                            Template.of("node", String.valueOf(Permission.PERMISSION_SCHEMATIC_SAVE))
+                            TagResolver.resolver(
+                                    "node",
+                                    Tag.inserting(Permission.PERMISSION_SCHEMATIC_SAVE)
+                            )
                     );
                     return false;
                 }
@@ -227,8 +245,7 @@ public class SchematicCmd extends SubCommand {
                     player.sendMessage(TranslatableCaption.of("error.task_in_process"));
                     return false;
                 }
-                Location location = player.getLocation();
-                Plot plot = location.getPlotAbs();
+                Plot plot = player.getCurrentPlot();
                 if (plot == null) {
                     player.sendMessage(TranslatableCaption.of("errors.not_in_plot"));
                     return false;
@@ -261,19 +278,22 @@ public class SchematicCmd extends SubCommand {
                 if (!player.hasPermission(Permission.PERMISSION_SCHEMATIC_LIST)) {
                     player.sendMessage(
                             TranslatableCaption.of("permission.no_permission"),
-                            Template.of("node", String.valueOf(Permission.PERMISSION_SCHEMATIC_LIST))
+                            TagResolver.resolver(
+                                    "node",
+                                    Tag.inserting(Permission.PERMISSION_SCHEMATIC_LIST)
+                            )
                     );
                     return false;
                 }
                 final String string = StringMan.join(this.schematicHandler.getSchematicNames(), "$2, $1");
                 player.sendMessage(
                         TranslatableCaption.of("schematics.schematic_list"),
-                        Template.of("list", string)
+                        TagResolver.resolver("list", Tag.inserting(Component.text(string)))
                 );
             }
             default -> player.sendMessage(
                     TranslatableCaption.of("commandconfig.command_syntax"),
-                    Template.of("value", "Possible values: save, paste, exportall, list")
+                    TagResolver.resolver("value", Tag.inserting(Component.text("Possible values: save, paste, exportall, list")))
             );
         }
         return true;
